  * Added and updated oidentd rules. (Closes: #186849)
    thanks to Tobias Wolter <towo+bugs@ydal.de>
  * Ignore normal use of su and sudo. (Closes: #182992, #192192)
  * Remove empty file innd.
  * Add switches to logtails default arguments.
  * Added cvs-build, cvs-clean debian/rules - stolen from apt.
  * Denote /etc/logcheck/logcheck.logfile as CFG in manpage and logcheck.
  todd:
  * Add debconf to logcheck Depends:
  * Check the return values of all commands. (Closes: #174173)
  * Add NEWS.Debian to logcheck.docs (Followup to #247360)
  eevans:
  * Made addition of logcheck user and permissions/ownership changes a
    conditional of an upgrade from a version less than 1.2.19.
    (Closes: #249324)
  * Added a note to README.Debian how to manually change the cronjob intervall.
    (Closes: #222240, #226937)
  alfie:
  * src/logcheck: test also for readability for the header.txt and footer.txt.
  * debian/changelog: stripped all trailing whitespace from the file.
  * debian/*templates: Some small consistency and formating updates. Updated
    the debian/po/*.po files too.

 -- 

logcheck (1.2.20a) unstable; urgency=low

  maks:
  * Fix bug where many extra TMPDIRs were being created and never removed

 -- Todd Troxell <ttroxell@debian.org>  Sunday, 16 May 2004 02:21:00 -0500

logcheck (1.2.20) unstable; urgency=low

  maks:
  * Updated gconfd rules. (Closes: #246695)
  * Added and Updated ntpd rules. (Closes: #246750)
  * Added first cyrus rules. (Closes: #247047)
  * Updated pop3d-ssl rules.
  * Updated postfix rules. (Closes: #196258, #190696)
  * Try secure TMPDIR in /tmp if /var/tmp fails. (Closes: #242284)
  * Initial german translation.
  * Set a sane DEFAULTLEVEL="server" in logcheck itself.
  * Better hantling of crontab.  (Closes: #243019)
  * Enhanced manpage logcheck(8). (Closes: #215640)
  * Add syslog-ng option for sysklogd dependency. (Closes: #248244)
  alfie:
  * Full german translation.
  * Updated pt_BR translation from André Luís Lopes.