@@ -20,6 +20,7 @@ logcheck (1.2.21) unstable; urgency=low
   * Add switches to logtails default arguments.
   * Added cvs-build, cvs-clean debian/rules - stolen from apt.
   * Denote /etc/logcheck/logcheck.logfile as CFG in manpage and logcheck.
+  * Move logtail.8 from debian to doc dir.
   todd:
   * Add debconf to logcheck Depends:
   * Check the return values of all commands. (Closes: #174173)
